--- a/programs/1.2-salammbo classification.ipynb
+++ b/programs/1.2-salammbo classification.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The counts of letters and _A_ broken down by chapter in *Salammbô* in French and its translation in English. The $X$ matrix contains the counts and $y$ the language; French: 1 and English: 0."
+    "The counts of letters and _A_ broken down by chapter in *Salammbô* in French and its translation in English. The $\\mathbf{X}$ matrix contains the counts and $y$ the language; French: 1 and English: 0."
    ]
   },
   {
@@ -42,6 +42,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "np.random.seed(0)\n",
     "\n",
     "X = np.array(\n",
     "    [[35680, 2217], [42514, 2761], [15162, 990], [35298, 2274],\n",
@@ -225,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We Split the Dataset"
+    "#### We split the dataset"
    ]
   },
   {
@@ -349,11 +350,35 @@
    "source": [
     "y_predicted = model.predict(X_val)\n",
     "print(y_predicted[:10])\n",
+    "print(y_val[:10])\n",
     "\n",
     "# evaluate the model\n",
     "scores = model.evaluate(X_val, y_val)\n",
     "print('Scores:', scores)\n",
     "\"\\n%s: %.2f%%\" % (model.metrics_names[1], scores[1] * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_pred = []\n",
+    "for i in y_predicted:\n",
+    "    if i < 0.5:\n",
+    "        y_pred.append([0])\n",
+    "    else:\n",
+    "        y_pred.append([1])\n",
+    "confusion_matrix(y_val, y_pred)"
    ]
   },
   {
@@ -459,6 +484,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = []\n",
+    "for i in y_predicted:\n",
+    "    if i < 0.5:\n",
+    "        y_pred.append([0])\n",
+    "    else:\n",
+    "        y_pred.append([1])\n",
+    "confusion_matrix(y_val, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The Model Weights"
    ]
   },
@@ -479,20 +526,6 @@
    "source": [
     "### For a real system, see the _Compact Language Detector v3_: https://github.com/google/cld3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
