--- a/programs/1.4-multiclass.ipynb
+++ b/programs/1.4-multiclass.ipynb
@@ -368,7 +368,8 @@
    "source": [
     "print('The original categories:\\n', y[121:126])\n",
     "print('The encoded categories:\\n', y_cat[121:126])\n",
-    "print('The predicted probabilities:\\n', model.predict(X[121:126]))"
+    "print('The predicted probabilities:\\n', model.predict(X[121:126]))\n",
+    "print('The predicted classes:\\n', list(map(np.argmax, model.predict(X[121:126]))))"
    ]
   },
   {
