--- a/programs/1.3-logistic regression.ipynb
+++ b/programs/1.3-logistic regression.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset from Berkson (1944)"
+    "## Initial Dataset from Berkson on Using Logistic Regression for Classification (1944)"
    ]
   },
   {
