--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -97,7 +97,9 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "train_sentences, dev_sentences, test_sentences, column_names = load_conll2009_pos()"
+    "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
+    "load_conll2009_pos()\n",
+    "train_sentences[:100]"
    ]
   },
   {
@@ -162,7 +164,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting the Context and Dictorizing it"
+    "### Extracting the Context and Dictorizing it\n",
+    "We extract windows of five words surrounding the word"
    ]
   },
   {
@@ -310,7 +313,9 @@
     "    scaler = StandardScaler(with_mean=False)\n",
     "    X = scaler.fit_transform(X_num)\n",
     "else:\n",
-    "    X = X_num"
+    "    X = X_num\n",
+    "print(X.shape)\n",
+    "X[0, :100].toarray()"
    ]
   },
   {
@@ -321,20 +326,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The POS and the number of different POS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The POS and the number of different POS\n",
     "pos_list = sorted(list(set(y_cat)))\n",
     "NB_CLASSES = len(pos_list) + 1\n",
-    "\n",
-    "# We build a part-of-speech index. We keep 0 for unknown symbols in the test set\n",
+    "pos_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We build a part-of-speech index. We keep 0 for unknown symbols in the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pos_rev_idx = dict(enumerate(pos_list, start=1))\n",
     "pos_idx = {v: k for k, v in pos_rev_idx.items()}\n",
-    "\n",
-    "# We encode y\n",
+    "pos_idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We encode $\\mathbf{y}$. We use one symbol for unknown parts of speech in the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y = [pos_idx[i] for i in y_cat]\n",
     "print(y_cat[:10])\n",
     "y[:10]"
@@ -344,7 +383,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Tagger"
+    "## The Tagger\n",
+    "   With `sparse_categorical_crossentropy` we do not need to vectorize $\\mathbf{y}$ with `to_categorical`"
    ]
   },
   {
@@ -396,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing the Model"
+    "### Formatting the Test Set"
    ]
   },
   {
@@ -406,12 +446,50 @@
    "outputs": [],
    "source": [
     "X_test_dict, y_test_cat = context_dictorizer.transform(test_dict)\n",
-    "\n",
     "# We transform the symbols into numbers\n",
     "X_test_num = dict_vectorizer.transform(X_test_dict)\n",
-    "X_test = scaler.transform(X_test_num)\n",
+    "if SCALER:\n",
+    "    # We standardize X_num\n",
+    "    X_test = scaler.transform(X_test_num)\n",
+    "else:\n",
+    "    X_test = X_test_num\n",
+    "print(y_test_cat[:5])\n",
     "y_test = [pos_idx.get(i, 0) for i in y_test_cat]\n",
-    "\n",
+    "print(y_test[:5])\n",
+    "print(X_test.shape)\n",
+    "X_test[0, :100].toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting a Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(pos_rev_idx[np.argmax(model.predict(X_test[0, :]))])\n",
+    "pos_rev_idx[y_test[0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
     "print('Optimizer', OPTIMIZER, 'Scaler', SCALER, 'Epochs', EPOCHS, 'Batch size', \n",
     "      BATCH_SIZE, 'Simple model', SIMPLE_MODEL, 'Mini corpus', MINI_CORPUS)\n",
@@ -420,11 +498,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction of parts of speech"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict_sentence(sentence, dict_vect, model, pos_rev_idx):\n",
+    "    column_names = ['id', 'form']\n",
+    "    sentence = list(enumerate(sentence.lower().split(), start=1))\n",
+    "    conll_cols = ''\n",
+    "    for tuple in sentence:\n",
+    "        conll_cols += str(tuple[0]) + '\\t' + tuple[1] + '\\n'\n",
+    "    # print(conll_cols)\n",
+    "\n",
+    "    conll_dict = CoNLLDictorizer(column_names, col_sep='\\t')\n",
+    "    sent_dict = conll_dict.transform(conll_cols)\n",
+    "    # print('Sentence:', sent_dict[0])\n",
+    "\n",
+    "    context_dictorizer = ContextDictorizer()\n",
+    "    context_dictorizer.fit(sent_dict)\n",
+    "    X_dict, y = context_dictorizer.transform(sent_dict, \n",
+    "                                             training_step=False)\n",
+    "    # print('Sentence, padded:', X_dict)\n",
+    "    # print('POS, y:', y)\n",
+    "    \n",
+    "    X = dict_vect.transform(X_dict)\n",
+    "\n",
+    "    # print(X)\n",
+    "    y_prob = model.predict(X)\n",
+    "    y_pred = y_prob.argmax(axis=-1)\n",
+    "    y_pred_cat = [pos_rev_idx[i] for i in y_pred]\n",
+    "    return y_pred_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = [\"That round table might collapse .\",\n",
+    "                 \"The man can learn well .\",\n",
+    "                 \"The man can swim .\",\n",
+    "                 \"The man can simwo .\"]\n",
+    "for sentence in sentences:\n",
+    "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
+    "                                       dict_vectorizer,\n",
+    "                                       model,\n",
+    "                                       pos_rev_idx)\n",
+    "    print(sentence)\n",
+    "    print(y_test_pred_cat)"
+   ]
   }
  ],
  "metadata": {
