--- a/programs/4.2-nn-pos-tagger-embeddings.ipynb
+++ b/programs/4.2-nn-pos-tagger-embeddings.ipynb
@@ -38,7 +38,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from keras.models import load_model\n",
-    "import math"
+    "import math\n",
+    "from keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -56,12 +57,10 @@
    "source": [
     "OPTIMIZER = 'rmsprop'\n",
     "SCALER = True\n",
-    "SIMPLE_MODEL = True\n",
     "BATCH_SIZE = 128\n",
     "EPOCHS = 1\n",
-    "MINI_CORPUS = True\n",
+    "MINI_CORPUS = False\n",
     "EMBEDDING_DIM = 100\n",
-    "UNKNOWN_TOKEN = '__UNK__'\n",
     "W_SIZE = 2"
    ]
   },
@@ -152,7 +151,8 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "train_sentences, dev_sentences, test_sentences, column_names = load_conll2009_pos()"
+    "train_sentences, dev_sentences, test_sentences, column_names = \\\n",
+    "load_conll2009_pos()"
    ]
   },
   {
@@ -359,7 +359,7 @@
     "corpus_words = []\n",
     "for x in X_dict:\n",
     "    corpus_words.extend(list(x.values()))\n",
-    "corpus_words = sorted(list(set(corpus_words)) + [UNKNOWN_TOKEN])\n",
+    "corpus_words = sorted(list(set(corpus_words)))\n",
     "print('# unique words seen in training corpus:', len(corpus_words))"
    ]
   },
@@ -367,7 +367,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We add these words to the vocabulary"
+    "### We add these words to the vocabulary\n",
+    "We add one word to the count for the unknown words"
    ]
   },
   {
@@ -379,15 +380,17 @@
     "embeddings_words = embeddings_dict.keys()\n",
     "print('Words in GloVe:',  len(embeddings_dict.keys()))\n",
     "vocabulary_words = set(corpus_words + list(embeddings_words))\n",
-    "cnt_uniq = len(vocabulary_words)\n",
-    "print('# unique words in the vocabulary: embeddings and corpus:', cnt_uniq)"
+    "cnt_uniq = len(vocabulary_words) + 1\n",
+    "print('# unique words in the vocabulary: embeddings and corpus:', \n",
+    "      cnt_uniq)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We now build an index"
+    "### We now build an index\n",
+    "We keep index 0 for the unknown words"
    ]
   },
   {
@@ -396,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_rev_idx = dict(enumerate(vocabulary_words))\n",
+    "word_rev_idx = dict(enumerate(vocabulary_words, start=1))\n",
     "word_idx = {v: k for k, v in word_rev_idx.items()}"
    ]
   },
@@ -465,7 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_matrix = np.random.random((len(vocabulary_words), EMBEDDING_DIM))"
+    "embedding_matrix = np.random.random((len(vocabulary_words) + 1, \n",
+    "                                     EMBEDDING_DIM))"
    ]
   },
   {
@@ -491,7 +495,7 @@
     "                                input_length=2 * W_SIZE + 1))\n",
     "if embedding_matrix is not None:\n",
     "    model.layers[0].set_weights([embedding_matrix])\n",
-    "    model.layers[0].trainable = True\n",
+    "    model.layers[0].trainable = False\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(NB_CLASSES, activation='softmax'))\n",
     "model.compile(loss='sparse_categorical_crossentropy',\n",
@@ -517,7 +521,7 @@
     "X_test_dict, y_test_cat = context_dictorizer.transform(test_dict)\n",
     "for x_dict_test in X_test_dict:\n",
     "    for word in x_dict_test:\n",
-    "        x_dict_test[word] = word_idx.get(x_dict_test[word], word_idx[UNKNOWN_TOKEN])\n",
+    "        x_dict_test[word] = word_idx.get(x_dict_test[word], 0)\n",
     "            \n",
     "# We transform the symbols into numbers\n",
     "X_test = dict_vect.transform(X_test_dict)\n",
@@ -525,9 +529,72 @@
     "\n",
     "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
     "print('Optimizer', OPTIMIZER, 'Scaler', SCALER, 'Epochs', EPOCHS, 'Batch size', \n",
-    "      BATCH_SIZE, 'Simple model', SIMPLE_MODEL, 'Mini corpus', MINI_CORPUS)\n",
+    "      BATCH_SIZE, 'Mini corpus', MINI_CORPUS)\n",
     "print('Loss:', test_loss)\n",
     "print('Accuracy:', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction of parts of speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_sentence(sentence, dict_vect, model, word_idx, pos_rev_idx):\n",
+    "    column_names = ['id', 'form']\n",
+    "    sentence = list(enumerate(sentence.lower().split(), start=1))\n",
+    "    conll_cols = ''\n",
+    "    for tuple in sentence:\n",
+    "        conll_cols += str(tuple[0]) + '\\t' + tuple[1] + '\\n'\n",
+    "    # print(conll_cols)\n",
+    "\n",
+    "    conll_dict = CoNLLDictorizer(column_names, col_sep='\\t')\n",
+    "    sent_dict = conll_dict.transform(conll_cols)\n",
+    "    # print('Sentence:', sent_dict[0])\n",
+    "\n",
+    "    context_dictorizer = ContextDictorizer()\n",
+    "    context_dictorizer.fit(sent_dict)\n",
+    "    X_dict, y = context_dictorizer.transform(sent_dict, \n",
+    "                                             training_step=False)\n",
+    "    # print('Sentence, padded:', X_dict)\n",
+    "    # print('POS, y:', y)\n",
+    "\n",
+    "    for x_dict in X_dict:\n",
+    "        for word in x_dict:\n",
+    "            x_dict[word] = word_idx.get(x_dict[word], 1)\n",
+    "    X = dict_vect.transform(X_dict)\n",
+    "\n",
+    "    # print(X)\n",
+    "    y_prob = model.predict(X)\n",
+    "    y_pred = y_prob.argmax(axis=-1)\n",
+    "    y_pred_cat = [pos_rev_idx[i] for i in y_pred]\n",
+    "    return y_pred_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = [\"That round table might collapse .\",\n",
+    "                 \"The man can learn well .\",\n",
+    "                 \"The man can swim .\",\n",
+    "                 \"The man can simwo .\"]\n",
+    "for sentence in sentences:\n",
+    "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
+    "                                       dict_vect,\n",
+    "                                       model, word_idx, \n",
+    "                                       pos_rev_idx)\n",
+    "    print(sentence)\n",
+    "    print(y_test_pred_cat)"
    ]
   },
   {
