--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -40,7 +40,8 @@
     "from keras.models import load_model\n",
     "import math\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras.utils import to_categorical"
+    "from keras.utils import to_categorical\n",
+    "from keras.layers import LSTM, Bidirectional, SimpleRNN, Dense"
    ]
   },
   {
@@ -57,14 +58,10 @@
    "outputs": [],
    "source": [
     "OPTIMIZER = 'rmsprop'\n",
-    "SCALER = True\n",
-    "SIMPLE_MODEL = True\n",
     "BATCH_SIZE = 128\n",
-    "EPOCHS = 4\n",
-    "MINI_CORPUS = True\n",
+    "EPOCHS = 2\n",
     "EMBEDDING_DIM = 100\n",
-    "UNKNOWN_TOKEN = '__UNK__'\n",
-    "MAX_SEQUENCE_LENGTH = 150  # mask_zero = True (conseillé par Marcus)\n",
+    "MAX_SEQUENCE_LENGTH = 150\n",
     "LSTM_UNITS = 512"
    ]
   },
@@ -267,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting the Unique Words"
+    "### Extracting the Unique Words and Parts of Speech"
    ]
   },
   {
@@ -276,10 +273,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocabulary_words = sorted(list(set([word for sentence in X_train_cat for word in sentence])))\n",
-    "pos = sorted(list(set([pos for sentence in Y_train_cat for pos in sentence])))\n",
+    "vocabulary_words = sorted(list(\n",
+    "    set([word for sentence \n",
+    "         in X_train_cat for word in sentence])))\n",
+    "pos = sorted(list(set([pos for sentence \n",
+    "                       in Y_train_cat for pos in sentence])))\n",
     "print(pos)\n",
     "NB_CLASSES = len(pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We create the dictionary\n",
+    "We add two words for the padding symbol and unknown words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings_words = embeddings_dict.keys()\n",
+    "print('Words in GloVe:',  len(embeddings_dict.keys()))\n",
+    "vocabulary_words = sorted(list(set(vocabulary_words + \n",
+    "                                   list(embeddings_words))))\n",
+    "cnt_uniq = len(vocabulary_words) + 2\n",
+    "print('# unique words in the vocabulary: embeddings and corpus:', \n",
+    "      cnt_uniq)"
    ]
   },
   {
@@ -295,21 +318,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_index(X, idx, num_words=None):\n",
+    "def to_index(X, idx):\n",
     "    \"\"\"\n",
     "    Convert the word lists (or POS lists) to indexes\n",
     "    :param X: List of word (or POS) lists\n",
     "    :param idx: word to number dictionary\n",
-    "    :param num_words: total number of words. Used for the unknown word\n",
     "    :return:\n",
     "    \"\"\"\n",
     "    X_idx = []\n",
     "    for x in X:\n",
-    "        if num_words:\n",
-    "            # We map the unknown words to the last index of the matrix\n",
-    "            x_idx = list(map(lambda x: idx.get(x, num_words + 1), x))\n",
-    "        else:\n",
-    "            x_idx = list(map(idx.get, x))\n",
+    "        # We map the unknown words to one\n",
+    "        x_idx = list(map(lambda x: idx.get(x, 1), x))\n",
     "        X_idx += [x_idx]\n",
     "    return X_idx"
    ]
@@ -327,48 +346,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We start at one to make provision for the padding symbol 0 in RNN and LSTMs\n",
-    "rev_idx_words = dict(enumerate(vocabulary_words, start=1))\n",
-    "rev_idx_pos = dict(enumerate(pos, start=1))\n",
-    "idx_words = {v: k for k, v in rev_idx_words.items()}\n",
-    "idx_pos = {v: k for k, v in rev_idx_pos.items()}\n",
-    "print('word index:', list(idx_words.items())[:10])\n",
-    "print('POS index:', list(idx_pos.items())[:10])\n",
+    "# We start at one to make provision for the padding symbol 0 \n",
+    "# in RNN and LSTMs and 1 for the unknown words\n",
+    "rev_word_idx = dict(enumerate(vocabulary_words, start=2))\n",
+    "rev_pos_idx = dict(enumerate(pos, start=2))\n",
+    "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
+    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
+    "print('word index:', list(word_idx.items())[:10])\n",
+    "print('POS index:', list(pos_idx.items())[:10])\n",
     "\n",
     "# We create the parallel sequences of indexes\n",
-    "X_idx = to_index(X_train_cat, idx_words)\n",
-    "Y_idx = to_index(Y_train_cat, idx_pos)\n",
+    "X_idx = to_index(X_train_cat, word_idx)\n",
+    "Y_idx = to_index(Y_train_cat, pos_idx)\n",
     "print('First sentences, word indices', X_idx[:3])\n",
     "print('First sentences, POS indices', Y_idx[:3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### We Create and Embedding Matrix\n",
-    "0 is the padding symbol and the last one is a unknown word"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdstate = np.random.RandomState(1234567)\n",
-    "embedding_matrix = rdstate.uniform(-0.05, 0.05, (len(vocabulary_words) + 2, EMBEDDING_DIM))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Shape of embedding matrix:', embedding_matrix.shape)\n",
-    "print('Embedding of table', embedding_matrix[idx_words['table']])\n",
-    "print('Embedding of the padding symbol, idx 0, random numbers', embedding_matrix[0])"
    ]
   },
   {
@@ -384,15 +375,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pad_sequences(X_idx, maxlen=MAX_SEQUENCE_LENGTH)\n",
-    "Y = pad_sequences(Y_idx, maxlen=MAX_SEQUENCE_LENGTH)\n",
+    "X = pad_sequences(X_idx)\n",
+    "Y = pad_sequences(Y_idx)\n",
     "\n",
     "print(X[0])\n",
     "print(Y[0])\n",
     "\n",
     "# The number of POS classes and 0 (padding symbol)\n",
-    "Y_train = to_categorical(Y, num_classes=len(pos) + 1)\n",
+    "Y_train = to_categorical(Y, num_classes=len(pos) + 2)\n",
     "print(Y_train[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We create an embedding matrix\n",
+    "0 is the padding symbol and index one is a unknown word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdstate = np.random.RandomState(1234567)\n",
+    "embedding_matrix = rdstate.uniform(-0.05, 0.05, \n",
+    "                                   (len(vocabulary_words) + 2, \n",
+    "                                    EMBEDDING_DIM))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for word in vocabulary_words:\n",
+    "    if word in embeddings_dict:\n",
+    "        # If the words are in the embeddings, we fill them with a value\n",
+    "        embedding_matrix[word_idx[word]] = embeddings_dict[word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Shape of embedding matrix:', embedding_matrix.shape)\n",
+    "print('Embedding of table', embedding_matrix[word_idx['table']])\n",
+    "print('Embedding of the padding symbol, idx 0, random numbers', \n",
+    "      embedding_matrix[0])"
    ]
   },
   {
@@ -412,14 +447,14 @@
     "model.add(layers.Embedding(len(vocabulary_words) + 2,\n",
     "                           EMBEDDING_DIM,\n",
     "                           mask_zero=True,\n",
-    "                           input_length=MAX_SEQUENCE_LENGTH))\n",
+    "                           input_length=None))\n",
     "model.layers[0].set_weights([embedding_matrix])\n",
     "# The default is True\n",
     "model.layers[0].trainable = True\n",
-    "#model.add(layers.Bidirectional(layers.SimpleRNN(NB_CLASSES + 1, return_sequences=True)))\n",
-    "#model.add(layers.Bidirectional(layers.LSTM(NB_CLASSES + 1, return_sequences=True)))\n",
-    "model.add(layers.Bidirectional(layers.LSTM(LSTM_UNITS, return_sequences=True)))\n",
-    "model.add(layers.Dense(NB_CLASSES + 1, activation='softmax'))"
+    "# model.add(SimpleRNN(100, return_sequences=True))\n",
+    "#model.add(Bidirectional(SimpleRNN(100, return_sequences=True)))\n",
+    "model.add(Bidirectional(LSTM(100, return_sequences=True)))\n",
+    "model.add(Dense(NB_CLASSES + 2, activation='softmax'))"
    ]
   },
   {
@@ -465,18 +500,18 @@
     "# In X_dict, we replace the words with their index\n",
     "X_test_cat, Y_test_cat = build_sequences(test_dict)\n",
     "# We create the parallel sequences of indexes\n",
-    "X_test_idx = to_index(X_test_cat, idx_words,\n",
-    "                      num_words=len(vocabulary_words))\n",
-    "Y_test_idx = to_index(Y_test_cat, idx_pos)\n",
+    "X_test_idx = to_index(X_test_cat, word_idx)\n",
+    "Y_test_idx = to_index(Y_test_cat, pos_idx)\n",
     "print('X[0] test idx', X_test_idx[0])\n",
     "print('Y[0] test idx', Y_test_idx[0])\n",
     "\n",
-    "X_test_padded = pad_sequences(X_test_idx, maxlen=MAX_SEQUENCE_LENGTH)\n",
-    "Y_test_padded = pad_sequences(Y_test_idx, maxlen=MAX_SEQUENCE_LENGTH)\n",
+    "X_test_padded = pad_sequences(X_test_idx)\n",
+    "Y_test_padded = pad_sequences(Y_test_idx)\n",
     "print('X[0] test idx passed', X_test_padded[0])\n",
     "print('Y[0] test idx padded', Y_test_padded[0])\n",
     "# One extra symbol for 0 (padding)\n",
-    "Y_test_padded_vectorized = to_categorical(Y_test_padded, num_classes=len(pos) + 1)\n",
+    "Y_test_padded_vectorized = to_categorical(Y_test_padded, \n",
+    "                                          num_classes=len(pos) + 2)\n",
     "print('Y[0] test idx padded vectorized', Y_test_padded_vectorized[0])\n",
     "print(X_test_padded.shape)\n",
     "print(Y_test_padded_vectorized.shape)"
@@ -496,7 +531,8 @@
    "outputs": [],
    "source": [
     "# Evaluates with the padding symbol\n",
-    "test_loss, test_acc = model.evaluate(X_test_padded, Y_test_padded_vectorized)\n",
+    "test_loss, test_acc = model.evaluate(X_test_padded, \n",
+    "                                     Y_test_padded_vectorized)\n",
     "print('Loss:', test_loss)\n",
     "print('Accuracy:', test_acc)"
    ]
@@ -545,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert to POS idx to symbols"
+    "### Convert POS indices to symbols"
    ]
   },
   {
@@ -557,7 +593,7 @@
     "pos_pred = []\n",
     "for sentence in pos_pred_num:\n",
     "    pos_idx = list(map(np.argmax, sentence))\n",
-    "    pos_cat = list(map(rev_idx_pos.get, pos_idx))\n",
+    "    pos_cat = list(map(rev_pos_idx.get, pos_idx))\n",
     "    pos_pred += [pos_cat]\n",
     "\n",
     "print(pos_pred[:2])\n",
@@ -584,14 +620,69 @@
     "        if pos_pred[id_s][id_w] == Y_test_cat[id_s][id_w]:\n",
     "            correct += 1\n",
     "        # The word is not in the dictionary\n",
-    "        if word not in idx_words:\n",
+    "        if word not in word_idx:\n",
     "            total_ukn += 1\n",
     "            if pos_pred[id_s][id_w] == Y_test_cat[id_s][id_w]:\n",
     "                correct_ukn += 1\n",
     "\n",
-    "print('total %d, correct %d, accuracy %f' % (total, correct, correct / total))\n",
+    "print('total %d, correct %d, accuracy %f' % \n",
+    "      (total, correct, correct / total))\n",
     "if total_ukn != 0:\n",
-    "    print('total unknown %d, correct %d, accuracy %f' % (total_ukn, correct_ukn, correct_ukn / total_ukn))\n"
+    "    print('total unknown %d, correct %d, accuracy %f' % \n",
+    "          (total_ukn, correct_ukn, correct_ukn / total_ukn))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction of parts of speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_sentence(sentence, model, word_idx, \n",
+    "                     vocabulary_words, rev_idx_pos, verbose=False):\n",
+    "    # Predict one sentence\n",
+    "    sentence = sentence.split()\n",
+    "    word_idxs = to_index([sentence], word_idx)\n",
+    "    word_idx_padded = pad_sequences(word_idxs)\n",
+    "\n",
+    "    pos_idx_pred = model.predict(word_idx_padded)\n",
+    "    # We remove padding\n",
+    "    pos_idx_pred = pos_idx_pred[0][-len(sentence):]\n",
+    "    pos_idx = list(map(np.argmax, pos_idx_pred))\n",
+    "    pos = list(map(rev_idx_pos.get, pos_idx))\n",
+    "    if verbose:\n",
+    "        print('Sentence', sentence)\n",
+    "        print('Sentence word indexes', word_idxs)\n",
+    "        print('Padded sentence', word_idx_padded)\n",
+    "        print('POS predicted', pos_idx_pred[0])\n",
+    "        print('POS shape', pos_idx_pred.shape)\n",
+    "    return pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = [\"That round table might collapse .\",\n",
+    "                 \"The man can learn well .\",\n",
+    "                 \"The man can swim .\",\n",
+    "                 \"The man can simwo .\"]\n",
+    "for sentence in sentences:\n",
+    "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
+    "                                       model, word_idx, \n",
+    "                                       vocabulary_words, \n",
+    "                                       rev_pos_idx)\n",
+    "    print(sentence)\n",
+    "    print(y_test_pred_cat)"
    ]
   },
   {
