New universal dependencies corpus

--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Part-of-Speech Tagging using Recurrent Neural Networks (RNN)\n",
-    "Author: Pierre Nugues"
+    "Author: Pierre Nugues\n",
+    "\n",
+    "A part-of-speech tagger using recurrent networks and GloVe embeddings and trained on a corpus following the Universal Dependencies format. Here we use the English Web Treebank:\n",
+    "https://github.com/UniversalDependencies/UD_English-EWT/tree/master."
    ]
   },
   {
@@ -138,6 +141,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def load_ud_en_ewt():\n",
+    "\n",
+    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
+    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
+    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
+    "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
+    "    column_names = list(map(str.lower, column_names))\n",
+    "    train_sentences = open(train_file).read().strip()\n",
+    "    dev_sentences = open(dev_file).read().strip()\n",
+    "    test_sentences = open(test_file).read().strip()\n",
+    "    # test2_sentences = open(test2_file).read().strip()\n",
+    "    return train_sentences, dev_sentences, test_sentences, column_names\n",
+    "\n",
     "def load_conll2009_pos():\n",
     "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
     "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
@@ -152,7 +169,10 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "train_sentences, dev_sentences, test_sentences, column_names = load_conll2009_pos()"
+    "#train_sentences, dev_sentences, test_sentences, column_names = load_conll2009_pos()\n",
+    "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
+    "load_ud_en_ewt()\n",
+    "train_sentences[:100]"
    ]
   },
   {
@@ -194,6 +214,7 @@
     "\n",
     "    def _split_in_words(self, sentence):\n",
     "        rows = re.split('\\n', sentence)\n",
+    "        rows = [row for row in rows if row[0] != '#']\n",
     "        return [Token(dict(zip(self.column_names,\n",
     "                               re.split(self.col_sep, row))))\n",
     "                for row in rows]"
@@ -226,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_sequences(corpus_dict, key_x='form', key_y='pos', tolower=True):\n",
+    "def build_sequences(corpus_dict, key_x='form', key_y='upos', tolower=True):\n",
     "    \"\"\"\n",
     "    Creates sequences from a list of dictionaries\n",
     "    :param corpus_dict:\n",
