--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Part-of-Speech Tagging using Feedforward Networks\n",
     "\n",
-    "Author: Pierre Nugues"
+    "Author: Pierre Nugues\n",
+    "A part-of-speech tagger using feed-forward networks and trained on a corpus following the Universal Dependencies format. Here we use the English Web Treebank:\n",
+    "https://github.com/UniversalDependencies/UD_English-EWT/tree/master."
    ]
   },
   {
@@ -59,8 +61,8 @@
     "SCALER = True\n",
     "SIMPLE_MODEL = False\n",
     "BATCH_SIZE = 128\n",
-    "EPOCHS = 1\n",
-    "MINI_CORPUS = True"
+    "EPOCHS = 2\n",
+    "MINI_CORPUS = False"
    ]
   },
   {
@@ -83,6 +85,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def load_ud_en_ewt():\n",
+    "\n",
+    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
+    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
+    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
+    "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
+    "    column_names = list(map(str.lower, column_names))\n",
+    "    train_sentences = open(train_file).read().strip()\n",
+    "    dev_sentences = open(dev_file).read().strip()\n",
+    "    test_sentences = open(test_file).read().strip()\n",
+    "    # test2_sentences = open(test2_file).read().strip()\n",
+    "    return train_sentences, dev_sentences, test_sentences, column_names\n",
+    "\n",
     "def load_conll2009_pos():\n",
     "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
     "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
@@ -97,8 +113,10 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
+    "#train_sentences, dev_sentences, test_sentences, column_names =\\\n",
+    "#load_conll2009_pos()\n",
     "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
-    "load_conll2009_pos()\n",
+    "load_ud_en_ewt()\n",
     "train_sentences[:100]"
    ]
   },
@@ -141,6 +159,7 @@
     "\n",
     "    def _split_in_words(self, sentence):\n",
     "        rows = re.split('\\n', sentence)\n",
+    "        rows = [row for row in rows if row[0] != '#']\n",
     "        return [Token(dict(zip(self.column_names,\n",
     "                               re.split(self.col_sep, row))))\n",
     "                for row in rows]"
@@ -183,7 +202,7 @@
     "    If the test_step is True, returns y = []\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, input='form', output='pos', w_size=2, tolower=True):\n",
+    "    def __init__(self, input='form', output='upos', w_size=2, tolower=True):\n",
     "        self.BOS_symbol = '__BOS__'\n",
     "        self.EOS_symbol = '__EOS__'\n",
     "        self.input = input\n",
@@ -529,7 +548,12 @@
     "    # print('Sentence, padded:', X_dict)\n",
     "    # print('POS, y:', y)\n",
     "    \n",
-    "    X = dict_vect.transform(X_dict)\n",
+    "    X_num = dict_vect.transform(X_dict)\n",
+    "    if SCALER:\n",
+    "    # We standardize X_num\n",
+    "        X = scaler.transform(X_num)\n",
+    "    else:\n",
+    "        X = X_num\n",
     "\n",
     "    # print(X)\n",
     "    y_prob = model.predict(X)\n",
