--- a/programs/4.2-nn-pos-tagger-embeddings.ipynb
+++ b/programs/4.2-nn-pos-tagger-embeddings.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Part-of-Speech Tagging using Feedforward Networks and Embeddings\n",
-    "Author: Pierre Nugues"
+    "Author: Pierre Nugues\n",
+    "\n",
+    "A part-of-speech tagger using feed-forward networks and GloVe embeddings and trained on a corpus following the Universal Dependencies format. Here we use the English Web Treebank:\n",
+    "https://github.com/UniversalDependencies/UD_English-EWT/tree/master."
    ]
   },
   {
@@ -56,9 +59,8 @@
    "outputs": [],
    "source": [
     "OPTIMIZER = 'rmsprop'\n",
-    "SCALER = True\n",
     "BATCH_SIZE = 128\n",
-    "EPOCHS = 1\n",
+    "EPOCHS = 4\n",
     "MINI_CORPUS = False\n",
     "EMBEDDING_DIM = 100\n",
     "W_SIZE = 2"
@@ -137,6 +139,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def load_ud_en_ewt():\n",
+    "\n",
+    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
+    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
+    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
+    "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
+    "    column_names = list(map(str.lower, column_names))\n",
+    "    train_sentences = open(train_file).read().strip()\n",
+    "    dev_sentences = open(dev_file).read().strip()\n",
+    "    test_sentences = open(test_file).read().strip()\n",
+    "    # test2_sentences = open(test2_file).read().strip()\n",
+    "    return train_sentences, dev_sentences, test_sentences, column_names\n",
+    "\n",
     "def load_conll2009_pos():\n",
     "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
     "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
@@ -151,8 +167,11 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "train_sentences, dev_sentences, test_sentences, column_names = \\\n",
-    "load_conll2009_pos()"
+    "# train_sentences, dev_sentences, test_sentences, column_names = \\\n",
+    "# load_conll2009_pos()\n",
+    "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
+    "load_ud_en_ewt()\n",
+    "train_sentences[:100]"
    ]
   },
   {
@@ -194,6 +213,7 @@
     "\n",
     "    def _split_in_words(self, sentence):\n",
     "        rows = re.split('\\n', sentence)\n",
+    "        rows = [row for row in rows if row[0] != '#']\n",
     "        return [Token(dict(zip(self.column_names,\n",
     "                               re.split(self.col_sep, row))))\n",
     "                for row in rows]"
@@ -235,7 +255,7 @@
     "    If the test_step is True, returns y = []\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, input='form', output='pos', w_size=2, tolower=True):\n",
+    "    def __init__(self, input='form', output='upos', w_size=2, tolower=True):\n",
     "        self.BOS_symbol = '__BOS__'\n",
     "        self.EOS_symbol = '__EOS__'\n",
     "        self.input = input\n",
@@ -596,13 +616,6 @@
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
