--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -7,6 +7,7 @@
     "# Part-of-Speech Tagging using Feedforward Networks\n",
     "\n",
     "Author: Pierre Nugues\n",
+    "\n",
     "A part-of-speech tagger using feed-forward networks and trained on a corpus following the Universal Dependencies format. Here we use the English Web Treebank:\n",
     "https://github.com/UniversalDependencies/UD_English-EWT/tree/master."
    ]
@@ -377,6 +378,7 @@
    "source": [
     "pos_rev_idx = dict(enumerate(pos_list, start=1))\n",
     "pos_idx = {v: k for k, v in pos_rev_idx.items()}\n",
+    "print(pos_rev_idx)\n",
     "pos_idx"
    ]
   },
@@ -580,6 +582,13 @@
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
