--- a/programs/4.2-nn-pos-tagger-embeddings.ipynb
+++ b/programs/4.2-nn-pos-tagger-embeddings.ipynb
@@ -548,7 +548,7 @@
     "y_test = [pos_idx.get(i, 0) for i in y_test_cat]\n",
     "\n",
     "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
-    "print('Optimizer', OPTIMIZER, 'Scaler', SCALER, 'Epochs', EPOCHS, 'Batch size', \n",
+    "print('Optimizer', OPTIMIZER, 'Epochs', EPOCHS, 'Batch size', \n",
     "      BATCH_SIZE, 'Mini corpus', MINI_CORPUS)\n",
     "print('Loss:', test_loss)\n",
     "print('Accuracy:', test_acc)"
@@ -616,6 +616,13 @@
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
