--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -472,9 +472,9 @@
     "model.layers[0].set_weights([embedding_matrix])\n",
     "# The default is True\n",
     "model.layers[0].trainable = True\n",
-    "# model.add(SimpleRNN(100, return_sequences=True))\n",
-    "#model.add(Bidirectional(SimpleRNN(100, return_sequences=True)))\n",
-    "model.add(Bidirectional(LSTM(100, return_sequences=True)))\n",
+    "model.add(SimpleRNN(100, return_sequences=True))\n",
+    "# model.add(Bidirectional(SimpleRNN(100, return_sequences=True)))\n",
+    "# model.add(Bidirectional(LSTM(100, return_sequences=True)))\n",
     "model.add(Dense(NB_CLASSES + 2, activation='softmax'))"
    ]
   },
@@ -523,6 +523,7 @@
     "# We create the parallel sequences of indexes\n",
     "X_test_idx = to_index(X_test_cat, word_idx)\n",
     "Y_test_idx = to_index(Y_test_cat, pos_idx)\n",
+    "\n",
     "print('X[0] test idx', X_test_idx[0])\n",
     "print('Y[0] test idx', Y_test_idx[0])\n",
     "\n",
@@ -613,9 +614,9 @@
    "source": [
     "pos_pred = []\n",
     "for sentence in pos_pred_num:\n",
-    "    pos_idx = list(map(np.argmax, sentence))\n",
-    "    pos_cat = list(map(rev_pos_idx.get, pos_idx))\n",
-    "    pos_pred += [pos_cat]\n",
+    "    pos_pred_idx = list(map(np.argmax, sentence))\n",
+    "    pos_pred_cat = list(map(rev_pos_idx.get, pos_pred_idx))\n",
+    "    pos_pred += [pos_pred_cat]\n",
     "\n",
     "print(pos_pred[:2])\n",
     "print(Y_test_cat[:2])"
