--- a/programs/5.3-monoinput.ipynb
+++ b/programs/5.3-monoinput.ipynb
@@ -156,11 +156,8 @@
     "    X = []\n",
     "    Y = []\n",
     "    for sentence in corpus_dict:\n",
-    "        x = []\n",
-    "        y = []\n",
-    "        for word in sentence:\n",
-    "            x += [word[key_x]]\n",
-    "            y += [word[key_y]]\n",
+    "        x = [word[key_x] for word in sentence]\n",
+    "        y = [word[key_y] for word in sentence]\n",
     "        if tolower:\n",
     "            x = list(map(str.lower, x))\n",
     "        X += [x]\n",
@@ -317,7 +314,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_ner_idx = to_categorical(Y_ner_idx)"
+    "Y_ner_idx_cat = to_categorical(Y_ner_idx)\n",
+    "print(Y_ner_idx_cat[1])\n",
+    "print(Y_ner_idx_cat[1][0])\n",
+    "Y_ner_idx_cat[1][-1]"
    ]
   },
   {
@@ -381,16 +381,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_words_idx, Y_ner_idx,\n",
+    "model.fit(X_words_idx, Y_ner_idx_cat,\n",
     "                  epochs=3, batch_size=128)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
