--- a/programs/5.2-multiinput.ipynb
+++ b/programs/5.2-multiinput.ipynb
@@ -156,11 +156,8 @@
     "    X = []\n",
     "    Y = []\n",
     "    for sentence in corpus_dict:\n",
-    "        x = []\n",
-    "        y = []\n",
-    "        for word in sentence:\n",
-    "            x += [word[key_x]]\n",
-    "            y += [word[key_y]]\n",
+    "        x = [word[key_x] for word in sentence]\n",
+    "        y = [word[key_y] for word in sentence]\n",
     "        if tolower:\n",
     "            x = list(map(str.lower, x))\n",
     "        X += [x]\n",
@@ -345,7 +342,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_ner_idx = to_categorical(Y_ner_idx)"
+    "Y_ner_idx_cat = to_categorical(Y_ner_idx)\n",
+    "print(Y_ner_idx_cat[1])\n",
+    "print(Y_ner_idx_cat[1][0])\n",
+    "Y_ner_idx_cat[1][-1]"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit({'text': X_words_idx, 'pos': X_pos_idx}, Y_ner_idx,\n",
+    "model.fit({'text': X_words_idx, 'pos': X_pos_idx}, Y_ner_idx_cat,\n",
     "                  epochs=3, batch_size=128)"
    ]
   }
